[gd_scene load_steps=23 format=2]

[ext_resource path="res://Entities/Chopper/chopper.gd" type="Script" id=1]
[ext_resource path="res://Entities/Chopper/Chopper_Forward.png" type="Texture" id=2]
[ext_resource path="res://Entities/Chopper/Chopper_Idle.png" type="Texture" id=3]
[ext_resource path="res://Effects/Tweening/scale_effect.gd" type="Script" id=4]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 128, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 256, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 384, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 128, 128, 128 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 128, 128, 128, 128 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 256, 128, 128, 128 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 384, 128, 128, 128 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 128, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 256, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 384, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 128, 128, 128 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 128, 128, 128, 128 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 256, 128, 128, 128 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 384, 128, 128, 128 )

[sub_resource type="SpriteFrames" id=17]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "idle",
"speed": 10.0
}, {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ) ],
"loop": true,
"name": "forward",
"speed": 10.0
} ]

[sub_resource type="CircleShape2D" id=18]
radius = 22.5385

[node name="Chopper" type="KinematicBody2D" groups=[
"air",
"allies",
]]
collision_mask = 0
script = ExtResource( 1 )
life = 150.0
damage = 130.0
RANGE_PX = 550
MOVE_SPEED_PX = 2300
has_gravity = false
can_shoot_up = true
spawn_in_air = true
is_enemy = true
coin_gain = 50
score_gain = 500

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 17 )
animation = "forward"
frame = 6
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 17, -3.5 )
shape = SubResource( 18 )

[node name="MissilePosition" type="Position2D" parent="."]
position = Vector2( 23.4033, 9.80873 )

[node name="ProgressBar" type="ProgressBar" parent="."]
margin_left = -0.311676
margin_top = 31.2696
margin_right = 32.6883
margin_bottom = 45.2696
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 1.20458, -2.4952 )
scale = Vector2( 6.09365, 3.72751 )

[node name="ScaleEffect" type="Tween" parent="."]
script = ExtResource( 4 )
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
